# flask-admin-core

./: .flaskenv  .gitignore  .pre-commit-config.yaml  config.py  pyproject.toml
application/: __init__.py
application/api/: __init__.py
application/api/passport/: __init__.py
application/api/rights/: __init__.py
application/api/roles/: __init__.py
application/api/users/: __init__.py
application/extensions/: __init__.py  init_jwt.py  init_script.py
application/orms/: __init__.py  user.py
application/orms/rights/: __init__.py  permission.py  role.py  user.py
application/utils/: functools.py  response_code.py
data/: flask-admin.sql  ums_permission.csv  ums_role.csv  ums_role_permission.csv  ums_user.csv  ums_user_role.csv
