[tool.poetry]
name = "flask-admin-core"
version = "0.0.1"
description = "flask admin project"
authors = ["zhengxinonly <pyxxponly@gmail.com>"]
readme = "README.md"
packages = [{ include = "flask_admin_core" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
isort = "^5.12.0"
black = "^23.1.0"
pre-commit = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
